...
            />
          ),
        }}
      />
      <TextInput
        label="Area name"
        testID="area-name"
        value={areaName}
        onChangeText={setAreaName}
        mode="outlined"
      />
      <Button
        mode="contained"
        disabled={areaName.length === 0}
        onPress={saveArea}
        style={styles.save}
      >
        Save
      </Button>
    </SafeAreaView>
  );
}

const styles = StyleSheet.create({
...
