...
      >
        <StatusBar
          barStyle={isDarkMode ? "light-content" : "dark-content"}
          backgroundColor={isDarkMode ? "#000000" : "#ffffff"}
        />
        <Stack>
          <Stack.Screen name="index" options={{ title: "Connections" }} />
          <Stack.Screen name="connection" options={{ headerShown: false }} />
          <Stack.Screen name="history" options={{ title: "History" }} />
          <Stack.Screen name="packs" options={{ title: "Base packs" }} />
          <Stack.Screen name="areas" options={{ title: "Areas" }} />
          <Stack.Screen name="channels" options={{ title: "Channels" }} />
          <Stack.Screen name="settings" options={{ title: "Settings" }} />
...
