...
              (currConnection?.addonPrices ?? 0)}
          </Text>
        </Dialog.Content>
        <Dialog.Actions style={styles.actions}>
          <Button onPress={viewConnection}>View</Button>
          <Button
            testID="mark-as-paid-button"
            onPress={markAsPaid}
            disabled={
              Boolean(currConnection?.lastPayment) &&
              isThisMonth(currConnection!.lastPayment!)
            }
          >
...
