...
      }}
    >
      <Stack.Screen
        options={{
          headerLeft: () => (
            <IconButton
              testID="menu-button"
              icon="menu"
              onPressIn={() => setDrawerOpen((prev) => !prev)}
              style={{ marginLeft: 0 }}
            />
          ),
          headerRight: (props) => (
...
